@@ -32,7 +32,7 @@
 /* This is between GTK_PRIORITY_RESIZE (+10) and GTK_PRIORITY_REDRAW (+20) */
 #define META_PRIORITY_RESIZE    (G_PRIORITY_HIGH_IDLE + 15)
 /* lower than GTK_PRIORITY_REDRAW */
-#define META_PRIORITY_COMPOSITE (G_PRIORITY_HIGH_IDLE + 25)
+#define META_PRIORITY_COMPOSITE (G_PRIORITY_HIGH_IDLE + 10)
 
 typedef struct _MetaUI MetaUI;
 
