@@ -1,3 +1,8 @@
+Thu Feb 24 15:17:09 2005  Søren Sandmann  <sandmann@redhat.com>
+
+	* src/compositor.c, src/cwindow.c: Support shaped windows, disable
+	snow, don't draw background.
+
 Sat Feb 12 19:52:09 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* src/compositor.c (create_root_buffer): Get rid of shocking pink
